--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div id="menu">
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#mission">About Us</a></li>
                 <li><a href="#contact">Contact Us</a></li>
                 <li><a href="#partners">Services</a></li>
@@ -26,7 +26,7 @@
     <div id="header">
         <h1>Welcome to DanceHolic!</h1>
         <h3>Eat, Sleep, Dance, Repeat</h3>
-        <button>Join Now</button>
+        <button><a href="#contact">Join Now</a></button>
     </div>
     <div id="mission">
         <h2 class="subtitle">Step-by-Step Learning For All Levels:-</h2>
